# UnifyOps

./: .gitignore  .gitleaks.toml  PRD_V1.md  README.md  ps.md  testing manual.md
.github/workflows/: cd-gcp.yml  ci-backend.yml  ci-frontend.yml  ci-full.yml
backend/: .dockerignore  .env.example  Dockerfile  requirements-dev.txt  requirements.txt
backend/app/: main.py
backend/app/core/: agent_bus.py  config.py  logging.py  middleware.py  store.py
backend/app/models/: auth.py  common.py  compliance.py  copilot.py  ingestion.py  interviews.py  lessons.py  maintenance.py  notifications.py
backend/app/routers/: admin.py  agents.py  auth.py  compliance.py  copilot.py  graph.py  health.py  lessons.py  (+5 more)
backend/scratch/: extract_phase4.py  phase4_details.txt  prd_sections.txt  search_prd.py  test_gcp.py
backend/storage/: 824bf8bc-61dc-452b-b043-abd2179bfe27_doc2.docx
backend/tests/: conftest.py  test_auth.py  test_compliance.py  test_copilot.py  test_graph.py  test_health.py  test_ingestion.py  test_interviews.py  test_lessons.py  test_maintenance.py  test_notifications.py  test_phase8.py  test_phase9.py
frontend/: .dockerignore  .gitignore  Dockerfile  package-lock.json  package.json
samples/: generate_real_pdfs.py  generate_samples.py
sdk/: .gitignore  LICENSE  README.md  pyproject.toml
sdk/src/unifyops/: __init__.py  client.py  compliance.py  copilot.py  document_ai.py  exceptions.py  lessons.py  maintenance.py  models.py  store.py
sdk/tests/: test_client.py  test_compliance.py  test_copilot.py  test_lessons.py  test_maintenance.py
terraform/: main.tf
(+71 files in other folders)
